--- a/FRONTEND/ejercicio1.html
+++ b/FRONTEND/ejercicio1.html
@@ -11,12 +11,31 @@
 <!--    <p> → párrafo breve.-->
 <!--    <a> → enlace con botón a youtube.com -->
 
+<div class="card">
+    <img width="100px" height="100px" src="https://cdn-icons-png.flaticon.com/512/4792/4792929.png" alt="Imagen">
+    <h2>Marcos</h2>
+    <p>Esta es mi descripcion</p>
+    <a href="https://www.youtube.com/">Ir a youtube</a>
+</div>
+
 </body>
     <style>
         .card {
-
+            width: 300px;
+            height: 300px;
+            background-color: aqua;
+            border-radius: 20px;
+            text-align: center;
         }
-
+        h2 {
+            font-size: 40px;
+        }
+        p {
+            text-decoration: underline;
+        }
+        a {
+            text-decoration: none;
+        }
 
     </style>
 </html>
