update tarea en clase

--- a/FRONTEND/ejercicioCasa1.html
+++ b/FRONTEND/ejercicioCasa1.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Ejercicio casa 1</title>
+    <title>Ejercicio casa 1 (Flex)</title>
 </head>
 <body>
 
 </body>
+<style>
+
+</style>
 </html>
