--- a/FRONTEND/clase6.html
+++ b/FRONTEND/clase6.html
@@ -89,9 +89,28 @@
             </div>
         </div>
 
+        <div style="background-color: aqua; padding: 5px">
+
+            <label for="option">
+                <input
+                        id="option"
+                        type="checkbox"
+                        name="termConditions"
+                        required
+                >
+                Acepto terminos y condiciones
+            </label>
+        </div>
+
+        <div style="background-color: aqua; padding: 5px">
+            <label for="mensaje">Mensaje</label>
+            <textarea id="mensaje" name="mensaje" required rows="4" placeholder="Ingresa tu mensaje aqui"></textarea>
+        </div>
+        <div>
+            <button type="submit">Enviar</button>
+            <button type="reset">Resetear</button>
+        </div>
     </form>
-
-
 </main>
 
 </body>
