--- a/FRONTEND/ejercicio2.html
+++ b/FRONTEND/ejercicio2.html
@@ -2,5 +2,6 @@
 <!-- Crear un formulario donde
 ingresemos nuestro NOMBRE, EDAD y 3 intereses
 Ejemplo: [x] Musica [] Deportes [] Lectura
+Con un boton de submit y un boton de reset
 -->
 
