--- a/FRONTEND/ejercicioClase2/ejercicioClase2.html
+++ b/FRONTEND/ejercicioClase2/ejercicioClase2.html
@@ -17,7 +17,7 @@
 <main>
     <h1>Google</h1>
     <div style="position: relative; width: 500px;">
-        <div class="contenedor-input">
+        <div class="contenedor-imagen">
             <img width="20" height="20" src="search-icon.svg" alt="search icon">
         </div>
         <input
@@ -57,6 +57,7 @@
 </body>
 <style>
 
+
     :root {
         --bg-btn: #f8f9fa;
     }
@@ -65,14 +66,13 @@
         font-size: 60px;
     }
 
-    .contenedor-input {
+    .contenedor-imagen {
         position: absolute;
-        top: 0;
-        left: 0;
         width: 40px;
         height: 100%;
         display: flex;
         justify-content: center;
+        /*background-color: #6b7280;*/
         align-items: center;
     }
 
